[tool.poetry]
name = "python-stopwatch2"
version = "1.0.11"
description = "A simple stopwatch for measuring code performance with static typing."
authors = [
    "Rafael <contact.devrma@gmail.com>",
    "Jonghwan Hyeon <hyeon0145@gmail.com>"
]
maintainers = ["Rafael <contact.devrma@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/devRMA/python-stopwatch2"
documentation = "https://github.com/devRMA/python-stopwatch2/tree/main/docs"
keywords = ["stopwatch", "timer", "time", "profile"]
packages = [{ include = "stopwatch" }]

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
coveralls = "^3.3.1"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
pytest = "^5.2"
pytest-cov = "^3.0.0"
pytest-sugar = "^0.9.4"
taskipy = "^1.9.0"
types-colorama = "^0.4.8"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
py_version = "37"

[tool.mypy]
namespace_packages = "True"

[tool.yapf]
based_on_style = "facebook"
indent_width = 4

[tool.taskipy.tasks]
test = { cmd = "python -m unittest -v tests/test_*.py", help = "runs all tests" }
